padding/spacing issue on code snippets

--- a/static/style.css
+++ b/static/style.css
@@ -53,6 +53,8 @@ body {
   padding: 0 var(--spacing-2);
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: start;
 }
 
 .content-container {
@@ -135,12 +137,15 @@ body {
 
 	text-decoration: none;
   transition: .2s background ease-in-out;
-
 }
 
 .repl-link:hover {
 	background:var(--dark-grey200);
   text-decoration: none;
+}
+
+code {
+  border-radius: 8px;
 }
 
 .markdown {
@@ -219,6 +224,8 @@ iframe {
 }
 
 
+
+
 /* Code Snippet */
 
 .markdown pre code {
@@ -246,7 +253,6 @@ white-space: pre-wrap;
 .markdown code {
   font-family: "IBM Plex Mono", monospace;
 	font-size: .9em;
-	padding: 2px 6px;
 	color: var(--code-snippet-text);
 	background-color: var(--code-snippet-highlight);
 }
